@@ -5,6 +5,8 @@ import net.minecraft.network.chat.Component;
 import com.zerog.neoessentials.util.MessageUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import com.zerog.neoessentials.logging.LogCategory;
+import com.zerog.neoessentials.logging.NeoLog;
 
 import java.util.UUID;
 import java.util.Map;
@@ -14,9 +16,6 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.io.File;
 import java.io.FileReader;
-import java.io.FileWriter;
-import java.nio.file.Files;
-import java.nio.file.StandardCopyOption;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.JsonObject;
@@ -32,7 +31,7 @@ public class AfkManager {
     private boolean autoSave = true;
     private int saveIntervalSeconds = 60;
     private static final Logger LOGGER = LoggerFactory.getLogger(AfkManager.class);
-    private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
+    private static final Gson GSON = new GsonBuilder().setPrettyPrinting().disableHtmlEscaping().create();
     
     // Thread-safe singleton using Bill Pugh pattern
     private static class SingletonHelper {
@@ -59,6 +58,9 @@ public class AfkManager {
 
     // Data persistence
     private final File afkDataFile = new File(com.zerog.neoessentials.util.ResourceUtil.DATA_DIR + "afk_data.json");
+    private static final String COLLECTION = "afk_data";
+    private final com.zerog.neoessentials.storage.DataStore store =
+        com.zerog.neoessentials.storage.StorageManager.getInstance().getStore();
 
     // AFK configuration (will be loaded from config)
     private long afkTimeoutMs = 300000; // 5 minutes default
@@ -85,12 +87,19 @@ public class AfkManager {
     // Configurable rotation threshold for AFK detection
     private double rotationThreshold = 5.0;
 
+    // Configurable movement distance threshold for AFK detection
+    private double movementThreshold = 0.1;
+
+    // Whether AFK players are invulnerable to all damage
+    private boolean invulnerableWhenAfk = false;
+
     // Configurable excluded commands for AFK activity tracking
-    private java.util.Set<String> excludedCommands = new java.util.HashSet<>(java.util.Arrays.asList(
+    private java.util.Set<String> excludedCommands = new java.util.HashSet<>(java.util.List.of(
         "afk", "list", "who", "tps", "ping", "help", "?"
     ));
     
     private AfkManager() {
+    migrateLegacyFileIfNeeded();
     loadAfkData();
     startAfkCheckTask();
     startAutoSaveTask();
@@ -173,7 +182,10 @@ public class AfkManager {
                     ServerPlayer p = srv.getPlayerList().getPlayer(playerUuid);
                     if (p != null) com.zerog.neoessentials.integrations.ChatIntegrationManager.broadcastAfkEvent(p, true, reason);
                 }
-            } catch (Exception ignored) {}
+            } catch (Exception e) {
+                com.zerog.neoessentials.logging.NeoLog.debug(LOGGER, com.zerog.neoessentials.logging.LogCategory.CHAT,
+                    "Failed to broadcast AFK-start event for {}", playerUuid, e);
+            }
         } else if (!afk && wasAfk) {
             data.setAfkStartTime(0);
             data.setLastActivity(System.currentTimeMillis());
@@ -185,7 +197,10 @@ public class AfkManager {
                     ServerPlayer p = srv.getPlayerList().getPlayer(playerUuid);
                     if (p != null) com.zerog.neoessentials.integrations.ChatIntegrationManager.broadcastAfkEvent(p, false, null);
                 }
-            } catch (Exception ignored) {}
+            } catch (Exception e) {
+                com.zerog.neoessentials.logging.NeoLog.debug(LOGGER, com.zerog.neoessentials.logging.LogCategory.CHAT,
+                    "Failed to broadcast AFK-return event for {}", playerUuid, e);
+            }
         }
 
         queueSaveAfkData();
@@ -235,10 +250,10 @@ public class AfkManager {
 
             // Send personal confirmation only for auto-AFK (manual toggle sends its own feedback via the command)
             if ("Inactive".equals(reason)) {
-                player.sendSystemMessage(Component.literal(MessageUtil.localize("commands.neoessentials.afk.now_afk_inactivity")));
+                player.sendSystemMessage(MessageUtil.component("commands.neoessentials.afk.auto_afk_notice"));
             }
 
-            LOGGER.info("Player {} went AFK{}", player.getName().getString(), 
+            NeoLog.info(LOGGER, LogCategory.CHAT, "Player {} went AFK{}", player.getName().getString(), 
                 reason != null && !reason.equals("Inactive") ? " (" + reason + ")" : "");
 
             // Update tablist display
@@ -271,7 +286,7 @@ public class AfkManager {
             server.getPlayerList().broadcastSystemMessage(returnComponent, false);
             server.sendSystemMessage(returnComponent);
 
-            LOGGER.info("Player {} returned from AFK", player.getName().getString());
+            NeoLog.info(LOGGER, LogCategory.CHAT, "Player {} returned from AFK", player.getName().getString());
             
             // Update tablist display
             com.zerog.neoessentials.chat.handlers.AfkTablistHandler.onPlayerReturnFromAfk(player);
@@ -318,14 +333,19 @@ public class AfkManager {
 
             // Check if AFK player should be kicked (only if kick timeout is > 0 and feature is enabled)
             if (kickAfkPlayers && afkKickTimeoutMs > 0 && data.isAfk()) {
+                // Skip players with the kick-exempt permission
+                if (com.zerog.neoessentials.api.permissions.PermissionAPI.hasPermission(uuid, "neoessentials.afk.exempt")) {
+                    continue;
+                }
+
                 long afkDuration = currentTime - data.getAfkStartTime();
 
                 // Warn player 60 seconds before kick
                 if (afkDuration > (afkKickTimeoutMs - 60000) && afkDuration < afkKickTimeoutMs) {
                     long secondsUntilKick = (afkKickTimeoutMs - afkDuration) / 1000;
                     if (secondsUntilKick > 0 && secondsUntilKick <= 60) {
-                        player.sendSystemMessage(Component.literal(
-                            MessageUtil.localize("commands.neoessentials.afk.kick_warning", secondsUntilKick)
+                        player.sendSystemMessage(MessageUtil.component(
+                            "commands.neoessentials.afk.kick_warning", secondsUntilKick
                         ));
                         LOGGER.warn("Player {} will be kicked for AFK in {} seconds", player.getName().getString(), secondsUntilKick);
                     }
@@ -336,9 +356,9 @@ public class AfkManager {
                     try {
                         String kickMsg = this.afkKickMessage != null && !this.afkKickMessage.isEmpty()
                             ? this.afkKickMessage
-                            : MessageUtil.localize("commands.neoessentials.afk.kick_message_default", (afkDuration / 60000));
+                            : MessageUtil.localize("commands.neoessentials.afk.kick_message", afkDuration / 60000);
                         player.connection.disconnect(Component.literal(kickMsg));
-                        LOGGER.info("Kicked player {} for being AFK too long (AFK for {} minutes)",
+                        NeoLog.info(LOGGER, LogCategory.CHAT, "Kicked player {} for being AFK too long (AFK for {} minutes)",
                             player.getName().getString(), afkDuration / 60000);
                     } catch (Exception e) {
                         LOGGER.error("Error kicking AFK player {}", player.getName().getString(), e);
@@ -399,32 +419,39 @@ public class AfkManager {
             this.broadcastReturnMessages = this.broadcastAfkMessages;
         }
 
-        // AFK kick settings - DISABLED by default to prevent unexpected kicks
-        // Only enable if explicitly set to true in config
-        this.kickAfkPlayers = afkConfig.has("kickAfkPlayers") &&
-            afkConfig.get("kickAfkPlayers").getAsBoolean();
-
-        LOGGER.info("AFK kick feature: {}", this.kickAfkPlayers ? "ENABLED" : "DISABLED");
-
+        // AFK kick settings: parse timeout FIRST, then derive kickAfkPlayers from it.
+        // This ensures that users only need to set kickTimeout > 0 to enable AFK kicks,
+        // matching the documented behaviour: kickTimeout = 0 means disabled.
         // Support both 'kickTimeout' (seconds) and 'kickTimeoutMinutes' (minutes) for compatibility
         if (afkConfig.has("kickTimeout")) {
             long kickTimeoutSeconds = afkConfig.get("kickTimeout").getAsLong();
-            this.afkKickTimeoutMs = kickTimeoutSeconds > 0 ? kickTimeoutSeconds * 1000 : 0;
-            if (this.kickAfkPlayers && kickTimeoutSeconds > 0) {
-                LOGGER.info("AFK kick timeout: {} seconds ({} minutes)", kickTimeoutSeconds, kickTimeoutSeconds / 60);
+            this.afkKickTimeoutMs = kickTimeoutSeconds > 0 ? kickTimeoutSeconds * 1000L : 0;
+            if (kickTimeoutSeconds > 0) {
+                NeoLog.info(LOGGER, LogCategory.CHAT, "AFK kick timeout: {} seconds ({} minutes)", kickTimeoutSeconds, kickTimeoutSeconds / 60);
             }
         } else if (afkConfig.has("kickTimeoutMinutes")) {
             long kickTimeoutMinutes = afkConfig.get("kickTimeoutMinutes").getAsLong();
-            this.afkKickTimeoutMs = kickTimeoutMinutes > 0 ? kickTimeoutMinutes * 60000 : 0;
-            if (this.kickAfkPlayers && kickTimeoutMinutes > 0) {
-                LOGGER.info("AFK kick timeout: {} minutes", kickTimeoutMinutes);
+            this.afkKickTimeoutMs = kickTimeoutMinutes > 0 ? kickTimeoutMinutes * 60000L : 0;
+            if (kickTimeoutMinutes > 0) {
+                NeoLog.info(LOGGER, LogCategory.CHAT, "AFK kick timeout: {} minutes", kickTimeoutMinutes);
             }
         } else {
-            // Default 30 minutes, but only matters if kickAfkPlayers is enabled
-            this.afkKickTimeoutMs = 1800000;
+            // No timeout key present; default to 0 (disabled)
+            this.afkKickTimeoutMs = 0;
         }
 
-        // Warn if kick is enabled with 0 timeout (would kick immediately!)
+        // Determine kickAfkPlayers:
+        // - If explicitly set in config, honour that value (allows force-disabling even with timeout > 0)
+        // - Otherwise auto-derive: kick is enabled whenever kickTimeout > 0
+        if (afkConfig.has("kickAfkPlayers")) {
+            this.kickAfkPlayers = afkConfig.get("kickAfkPlayers").getAsBoolean();
+        } else {
+            this.kickAfkPlayers = this.afkKickTimeoutMs > 0;
+        }
+
+        NeoLog.info(LOGGER, LogCategory.CHAT, "AFK kick feature: {}", this.kickAfkPlayers ? "ENABLED" : "DISABLED");
+
+        // Warn if kick is enabled with 0 timeout (would kick immediately!) – guard against explicit misconfiguration
         if (this.kickAfkPlayers && this.afkKickTimeoutMs == 0) {
             LOGGER.error("AFK kick is ENABLED but timeout is 0! This would kick players immediately. Setting to 30 minutes default.");
             this.afkKickTimeoutMs = 1800000; // Force 30 minutes minimum
@@ -478,6 +505,18 @@ public class AfkManager {
             this.rotationThreshold = 5.0;
         }
 
+        // Support movementThreshold from config
+        if (afkConfig.has("movementThreshold")) {
+            try {
+                this.movementThreshold = afkConfig.get("movementThreshold").getAsDouble();
+            } catch (Exception e) {
+                this.movementThreshold = 0.1;
+                LOGGER.warn("Invalid value for movementThreshold in config, using default 0.1");
+            }
+        } else {
+            this.movementThreshold = 0.1;
+        }
+
         // Support excludedCommands from config
         if (afkConfig.has("excludedCommands") && afkConfig.get("excludedCommands").isJsonArray()) {
             try {
@@ -493,8 +532,15 @@ public class AfkManager {
             }
         }
 
-        LOGGER.info("AFK configuration loaded: timeout={}min, autoAfk={}, broadcast={}, kick={}", 
-            afkTimeoutMs / 60000, autoAfkEnabled, broadcastAfkMessages, kickAfkPlayers);
+        // Support invulnerableWhenAfk from config
+        if (afkConfig.has("invulnerableWhenAfk")) {
+            this.invulnerableWhenAfk = afkConfig.get("invulnerableWhenAfk").getAsBoolean();
+        } else {
+            this.invulnerableWhenAfk = false;
+        }
+
+        NeoLog.info(LOGGER, LogCategory.CHAT, "AFK configuration loaded: timeout={}min, autoAfk={}, broadcast={}, kick={}, invulnerable={}",
+            afkTimeoutMs / 60000, autoAfkEnabled, broadcastAfkMessages, kickAfkPlayers, invulnerableWhenAfk);
     }
     
     /**
@@ -502,39 +548,38 @@ public class AfkManager {
      */
     public void onPlayerLogout(UUID playerUuid) {
         playerData.remove(playerUuid);
-        queueSaveAfkData();
+        store.delete(COLLECTION, playerUuid.toString());
     }
-    
+
     /**
-     * Load AFK data from file
+     * Load AFK data from the active {@link com.zerog.neoessentials.storage.DataStore}.
+     * Only {@code lastActivity} is persisted — AFK status/reason/start-time are
+     * intentionally session-based and are never restored on server restart (matches the
+     * previous file-based behavior).
      */
     private void loadAfkData() {
-        if (!afkDataFile.exists()) return;
-        
-        try (FileReader reader = new FileReader(afkDataFile)) {
-            JsonObject data = JsonParser.parseReader(reader).getAsJsonObject();
-            
-            for (Map.Entry<String, com.google.gson.JsonElement> entry : data.entrySet()) {
+        try {
+            for (Map.Entry<String, JsonObject> entry : store.getAll(COLLECTION).entrySet()) {
                 try {
                     UUID uuid = UUID.fromString(entry.getKey());
-                    JsonObject playerJson = entry.getValue().getAsJsonObject();
-                    
+                    JsonObject playerJson = entry.getValue();
+
                     PlayerAfkData playerAfkData = new PlayerAfkData();
                     playerAfkData.setLastActivity(playerJson.get("lastActivity").getAsLong());
                     // Don't restore AFK status on server restart - all players start as active
-                    
+
                     playerData.put(uuid, playerAfkData);
                 } catch (Exception e) {
                     LOGGER.warn("Failed to load AFK data for entry: {}", entry.getKey());
                 }
             }
-            
-            LOGGER.info("Loaded AFK data for {} players", playerData.size());
+
+            NeoLog.info(LOGGER, LogCategory.CHAT, "Loaded AFK data for {} players", playerData.size());
         } catch (Exception e) {
             LOGGER.error("Failed to load AFK data", e);
         }
     }
-    
+
     /**
      * Queue save of AFK data (async)
      */
@@ -548,44 +593,59 @@ public class AfkManager {
             afkCheckExecutor.execute(this::saveAfkData);
         } catch (java.util.concurrent.RejectedExecutionException e) {
             // Executor is shutting down, just log and skip
-            LOGGER.debug("Cannot queue AFK data save - executor is shutting down");
+            NeoLog.debug(LOGGER, LogCategory.CHAT, "Cannot queue AFK data save - executor is shutting down");
         }
     }
-    
+
     /**
-     * Save AFK data to file
+     * Persist current AFK data (just {@code lastActivity} per player) to the active
+     * {@link com.zerog.neoessentials.storage.DataStore}, one record per tracked player.
      */
     private void saveAfkData() {
         try {
-            File parentDir = afkDataFile.getParentFile();
-            if (parentDir != null && !parentDir.exists()) {
-                if (!parentDir.mkdirs()) {
-                    LOGGER.error("Failed to create AFK data directory: {}", parentDir.getAbsolutePath());
-                    return;
-                }
-            }
-            
-            JsonObject data = new JsonObject();
             for (Map.Entry<UUID, PlayerAfkData> entry : playerData.entrySet()) {
                 JsonObject playerJson = new JsonObject();
-                PlayerAfkData playerData = entry.getValue();
-                
-                playerJson.addProperty("lastActivity", playerData.getLastActivity());
                 // Don't save AFK status - it's session-based
-                
-                data.add(entry.getKey().toString(), playerJson);
+                playerJson.addProperty("lastActivity", entry.getValue().getLastActivity());
+                store.put(COLLECTION, entry.getKey().toString(), playerJson);
             }
-            
-            File tempFile = new File(afkDataFile.getAbsolutePath() + ".tmp");
-            try (FileWriter writer = new FileWriter(tempFile)) {
-                GSON.toJson(data, writer);
-            }
-            
-            Files.move(tempFile.toPath(), afkDataFile.toPath(), 
-                StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.ATOMIC_MOVE);
-                
         } catch (Exception e) {
             LOGGER.error("Failed to save AFK data", e);
+        }
+    }
+
+    /**
+     * One-time import of the legacy {@code afk_data.json} file into the active DataStore,
+     * if it's still empty and storage.autoMigrate is enabled.
+     */
+    private void migrateLegacyFileIfNeeded() {
+        if (store.hasAnyData(COLLECTION)) return;
+        if (!com.zerog.neoessentials.config.ConfigManager.getInstance().isStorageAutoMigrateEnabled()) return;
+        if (!afkDataFile.exists()) return;
+
+        int migrated = 0;
+        try (FileReader reader = new FileReader(afkDataFile)) {
+            JsonObject data = JsonParser.parseReader(reader).getAsJsonObject();
+            if (data == null) return;
+            for (Map.Entry<String, com.google.gson.JsonElement> entry : data.entrySet()) {
+                try {
+                    UUID uuid = UUID.fromString(entry.getKey());
+                    JsonObject playerJson = entry.getValue().getAsJsonObject();
+                    JsonObject record = new JsonObject();
+                    record.addProperty("lastActivity", playerJson.get("lastActivity").getAsLong());
+                    store.put(COLLECTION, uuid.toString(), record);
+                    migrated++;
+                } catch (Exception e) {
+                    LOGGER.warn("Failed to migrate legacy AFK data for entry: {}", entry.getKey());
+                }
+            }
+        } catch (Exception e) {
+            LOGGER.error("Failed to migrate legacy afk_data.json", e);
+        }
+
+        if (migrated > 0) {
+            NeoLog.info(LOGGER, LogCategory.CHAT, "AfkManager: migrated {} AFK record(s) from legacy afk_data.json into the '{}' storage backend.",
+                migrated, com.zerog.neoessentials.storage.StorageManager.getInstance().getActiveType());
         }
     }
     
@@ -600,15 +660,17 @@ public class AfkManager {
     public boolean isTrackCommands() { return trackCommands; }
     public boolean isTrackInteractions() { return trackInteractions; }
     public double getRotationThreshold() { return rotationThreshold; }
+    public double getMovementThreshold() { return movementThreshold; }
     public boolean isAutoSave() { return autoSave; }
     public int getSaveIntervalSeconds() { return saveIntervalSeconds; }
     public java.util.Set<String> getExcludedCommands() { return excludedCommands; }
+    public boolean isInvulnerableWhenAfk() { return invulnerableWhenAfk; }
     
     /**
      * Shutdown the AFK manager
      */
     public void shutdown() {
-        LOGGER.info("Shutting down AFK Manager...");
+        NeoLog.info(LOGGER, LogCategory.CHAT, "Shutting down AFK Manager...");
         // Set shutdown flag first to prevent new task submissions
         isShuttingDown = true;
 
@@ -622,7 +684,7 @@ public class AfkManager {
                 LOGGER.warn("AFK Manager executor did not terminate gracefully, forcing shutdown...");
                 afkCheckExecutor.shutdownNow();
             }
-            LOGGER.info("AFK Manager shutdown complete");
+            NeoLog.info(LOGGER, LogCategory.CHAT, "AFK Manager shutdown complete");
         } catch (InterruptedException e) {
             LOGGER.warn("Interrupted while waiting for AFK Manager executor shutdown");
             afkCheckExecutor.shutdownNow();
@@ -640,7 +702,7 @@ public class AfkManager {
             if (autoSave) {
                 try {
                     saveAfkData();
-                    com.zerog.neoessentials.util.DebugLogger.log(LOGGER, "AFK data auto-saved");
+                    com.zerog.neoessentials.logging.NeoLog.debug(LOGGER, com.zerog.neoessentials.logging.LogCategory.CHAT, "AFK data auto-saved");
                 } catch (Exception e) {
                     LOGGER.error("Error during AFK data auto-save", e);
                 }
@@ -652,9 +714,9 @@ public class AfkManager {
      * Reload AFK data from disk (does not clear current AFK states)
      */
     public void reload() {
-        LOGGER.info("Reloading AFK system...");
+        NeoLog.info(LOGGER, LogCategory.CHAT, "Reloading AFK system...");
         // Note: We don't clear current AFK states as they represent live player state
         // Just reload configuration if needed
-        LOGGER.info("AFK system reloaded");
+        NeoLog.info(LOGGER, LogCategory.CHAT, "AFK system reloaded");
     }
 }
