@@ -5,6 +5,8 @@ import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.suggestion.SuggestionProvider;
 import com.zerog.neoessentials.config.ConfigManager;
+import com.zerog.neoessentials.logging.LogCategory;
+import com.zerog.neoessentials.logging.NeoLog;
 import com.zerog.neoessentials.moderation.BanManager;
 import com.zerog.neoessentials.util.MessageUtil;
 import com.zerog.neoessentials.util.PermissionValidator;
@@ -18,7 +20,6 @@ import org.slf4j.LoggerFactory;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * Ban system commands: /ban, /tempban, /banip, /unban, /unbanip, /banlist
@@ -31,7 +32,7 @@ public class BanCommand {
         return SharedSuggestionProvider.suggest(
             banManager.getAllPlayerBans().stream()
                 .map(ban -> ban.playerName)
-                .collect(Collectors.toList()),
+                .toList(),
             builder
         );
     };
@@ -41,7 +42,7 @@ public class BanCommand {
         return SharedSuggestionProvider.suggest(
             banManager.getAllIPBans().stream()
                 .map(ban -> ban.ipAddress)
-                .collect(Collectors.toList()),
+                .toList(),
             builder
         );
     };
@@ -53,27 +54,30 @@ public class BanCommand {
         }
         
         // /ban <player> [reason]
+        if (ConfigManager.getInstance().isCommandEnabled("ban")) {
         dispatcher.register(Commands.literal("ban")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.ban").hasPermission())
-            .then(Commands.argument("player", StringArgumentType.greedyString())
+            .then(Commands.argument("player", StringArgumentType.word())
                 .suggests((ctx, builder) -> SharedSuggestionProvider.suggest(
                     ctx.getSource().getServer().getPlayerNames(), builder))
                 .executes(ctx -> executeBan(ctx, StringArgumentType.getString(ctx, "player"),
                     com.zerog.neoessentials.config.ConfigManager.getInstance().getDefaultBanReason()))
                 .then(Commands.argument("reason", StringArgumentType.greedyString())
-                    .executes(ctx -> executeBan(ctx, 
-                        ctx.getInput().split(" ", 3)[1], // Get player name 
-                        ctx.getInput().split(" ", 3).length > 2 ? ctx.getInput().split(" ", 3)[2] : com.zerog.neoessentials.config.ConfigManager.getInstance().getDefaultBanReason()))))
+                    .executes(ctx -> executeBan(ctx,
+                        StringArgumentType.getString(ctx, "player"),
+                        StringArgumentType.getString(ctx, "reason")))))
         );
+        }
 
         // /tempban <player> <duration> [reason]
+        if (ConfigManager.getInstance().isCommandEnabled("tempban")) {
         dispatcher.register(Commands.literal("tempban")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.tempban").hasPermission())
             .then(Commands.argument("player", StringArgumentType.word())
                 .suggests((ctx, builder) -> SharedSuggestionProvider.suggest(
                     ctx.getSource().getServer().getPlayerNames(), builder))
                 .then(Commands.argument("duration", StringArgumentType.word())
-                    .executes(ctx -> executeTempBan(ctx, 
+                    .executes(ctx -> executeTempBan(ctx,
                         StringArgumentType.getString(ctx, "player"),
                         StringArgumentType.getString(ctx, "duration"),
                         com.zerog.neoessentials.config.ConfigManager.getInstance().getDefaultBanReason()))
@@ -83,36 +87,44 @@ public class BanCommand {
                             StringArgumentType.getString(ctx, "duration"),
                             StringArgumentType.getString(ctx, "reason"))))))
         );
+        }
 
         // /banip <ip> [reason]
+        if (ConfigManager.getInstance().isCommandEnabled("banip")) {
         dispatcher.register(Commands.literal("banip")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.banip").hasPermission())
             .then(Commands.argument("ip", StringArgumentType.word())
-                .executes(ctx -> executeBanIP(ctx, 
+                .executes(ctx -> executeBanIP(ctx,
                     StringArgumentType.getString(ctx, "ip"), com.zerog.neoessentials.config.ConfigManager.getInstance().getDefaultBanReason()))
                 .then(Commands.argument("reason", StringArgumentType.greedyString())
                     .executes(ctx -> executeBanIP(ctx,
                         StringArgumentType.getString(ctx, "ip"),
                         StringArgumentType.getString(ctx, "reason")))))
         );
-        
+        }
+
         // /unban <player>
+        if (ConfigManager.getInstance().isCommandEnabled("unban")) {
         dispatcher.register(Commands.literal("unban")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.unban").hasPermission())
             .then(Commands.argument("player", StringArgumentType.word())
                 .suggests(SUGGEST_BANNED_PLAYERS)
                 .executes(ctx -> executeUnban(ctx, StringArgumentType.getString(ctx, "player"))))
         );
-        
+        }
+
         // /unbanip <ip>
+        if (ConfigManager.getInstance().isCommandEnabled("unbanip")) {
         dispatcher.register(Commands.literal("unbanip")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.unbanip").hasPermission())
             .then(Commands.argument("ip", StringArgumentType.word())
                 .suggests(SUGGEST_BANNED_IPS)
                 .executes(ctx -> executeUnbanIP(ctx, StringArgumentType.getString(ctx, "ip"))))
         );
-        
+        }
+
         // /banlist [players|ips]
+        if (ConfigManager.getInstance().isCommandEnabled("banlist")) {
         dispatcher.register(Commands.literal("banlist")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.banlist").hasPermission())
             .executes(ctx -> executeBanList(ctx, "players"))
@@ -121,8 +133,10 @@ public class BanCommand {
             .then(Commands.literal("ips")
                 .executes(ctx -> executeBanList(ctx, "ips")))
         );
+        }
 
         // /tempbanip <ip> <duration> [reason]  — Essentials: Commandtempbanip
+        if (ConfigManager.getInstance().isCommandEnabled("tempbanip")) {
         dispatcher.register(Commands.literal("tempbanip")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.tempbanip").hasPermission())
             .then(Commands.argument("ip", StringArgumentType.word())
@@ -137,6 +151,7 @@ public class BanCommand {
                             StringArgumentType.getString(ctx, "duration"),
                             StringArgumentType.getString(ctx, "reason"))))))
         );
+        }
     }
 
     private static int executeBan(CommandContext<CommandSourceStack> ctx, String playerName, String reason) {
@@ -179,17 +194,17 @@ public class BanCommand {
             
             if (success) {
                 String message = MessageUtil.localize("neoessentials.moderation.ban_success", resolvedName, reason);
-                source.sendSuccess(() -> MessageUtil.success(message), true);
+                source.sendSuccess(() -> MessageUtil.coloredText(message), false);
                 
                 // Broadcast ban to all online staff
                 broadcastToStaff(server, MessageUtil.localize("neoessentials.moderation.ban_broadcast", 
-                    resolvedName, bannedBy, reason));
+                    resolvedName, bannedBy, reason), senderId(source));
                 
-                LOGGER.info("Player {} banned by {} for: {}", resolvedName, bannedBy, reason);
+                NeoLog.info(LOGGER, LogCategory.MODERATION, "Player {} banned by {} for: {}", resolvedName, bannedBy, reason);
                 return 1;
             } else {
                 String message = MessageUtil.localize("neoessentials.moderation.ban_failed", resolvedName);
-                source.sendFailure(MessageUtil.error(message));
+                source.sendFailure(MessageUtil.coloredText(message));
                 return 0;
             }
             
@@ -248,17 +263,17 @@ public class BanCommand {
             
             if (success) {
                 String message = MessageUtil.localize("neoessentials.moderation.tempban_success", resolvedName, durationStr, reason);
-                source.sendSuccess(() -> MessageUtil.success(message), true);
+                source.sendSuccess(() -> MessageUtil.coloredText(message), false);
                 
                 // Broadcast ban to all online staff
                 broadcastToStaff(server, MessageUtil.localize("neoessentials.moderation.tempban_broadcast", 
-                    resolvedName, durationStr, bannedBy, reason));
+                    resolvedName, durationStr, bannedBy, reason), senderId(source));
                 
-                LOGGER.info("Player {} temp banned by {} for {} - Reason: {}", resolvedName, bannedBy, durationStr, reason);
+                NeoLog.info(LOGGER, LogCategory.MODERATION, "Player {} temp banned by {} for {} - Reason: {}", resolvedName, bannedBy, durationStr, reason);
                 return 1;
             } else {
                 String message = MessageUtil.localize("neoessentials.moderation.ban_failed", resolvedName);
-                source.sendFailure(MessageUtil.error(message));
+                source.sendFailure(MessageUtil.coloredText(message));
                 return 0;
             }
             
@@ -293,10 +308,10 @@ public class BanCommand {
             if (success) {
                 String formattedDur = BanManager.formatDuration(durationMillis);
                 String msg = MessageUtil.localize("neoessentials.moderation.tempbanip_success", ipAddress, formattedDur, reason);
-                source.sendSuccess(() -> MessageUtil.success(msg), true);
+                source.sendSuccess(() -> MessageUtil.coloredText(msg), false);
                 broadcastToStaff(server, MessageUtil.localize("neoessentials.moderation.tempbanip_broadcast",
-                    ipAddress, formattedDur, bannedBy, reason));
-                LOGGER.info("IP {} temp-banned by {} for {} - Reason: {}", ipAddress, bannedBy, formattedDur, reason);
+                    ipAddress, formattedDur, bannedBy, reason), senderId(source));
+                NeoLog.info(LOGGER, LogCategory.MODERATION, "IP {} temp-banned by {} for {} - Reason: {}", ipAddress, bannedBy, formattedDur, reason);
                 return 1;
             } else {
                 source.sendFailure(MessageUtil.error("neoessentials.moderation.banip_failed", ipAddress));
@@ -328,17 +343,17 @@ public class BanCommand {
             
             if (success) {
                 String message = MessageUtil.localize("neoessentials.moderation.banip_success", ipAddress, reason);
-                source.sendSuccess(() -> MessageUtil.success(message), true);
+                source.sendSuccess(() -> MessageUtil.coloredText(message), false);
                 
                 // Broadcast ban to all online staff
                 broadcastToStaff(server, MessageUtil.localize("neoessentials.moderation.banip_broadcast", 
-                    ipAddress, bannedBy, reason));
+                    ipAddress, bannedBy, reason), senderId(source));
                 
-                LOGGER.info("IP {} banned by {} for: {}", ipAddress, bannedBy, reason);
+                NeoLog.info(LOGGER, LogCategory.MODERATION, "IP {} banned by {} for: {}", ipAddress, bannedBy, reason);
                 return 1;
             } else {
                 String message = MessageUtil.localize("neoessentials.moderation.banip_failed", ipAddress);
-                source.sendFailure(MessageUtil.error(message));
+                source.sendFailure(MessageUtil.coloredText(message));
                 return 0;
             }
             
@@ -363,26 +378,26 @@ public class BanCommand {
             
             // First check if it's a banned player
             List<BanManager.BanEntry> allBans = banManager.getAllPlayerBans();
-            LOGGER.info("Checking {} active bans for player '{}'", allBans.size(), playerName);
+            NeoLog.info(LOGGER, LogCategory.MODERATION, "Checking {} active bans for player '{}'", allBans.size(), playerName);
             
             for (BanManager.BanEntry ban : allBans) {
-                LOGGER.debug("Checking ban: {} (UUID: {})", ban.playerName, ban.playerId);
+                NeoLog.debug(LOGGER, LogCategory.MODERATION, "Checking ban: {} (UUID: {})", ban.playerName, ban.playerId);
                 if (ban.playerName.equalsIgnoreCase(playerName)) {
                     playerId = ban.playerId;
                     resolvedName = ban.playerName;
-                    LOGGER.info("Found banned player: {} with UUID {}", resolvedName, playerId);
+                    NeoLog.info(LOGGER, LogCategory.MODERATION, "Found banned player: {} with UUID {}", resolvedName, playerId);
                     break;
                 }
             }
             
             // If not found in bans, try player cache
             if (playerId == null) {
-                LOGGER.info("Player '{}' not found in ban list, checking player cache", playerName);
+                NeoLog.info(LOGGER, LogCategory.MODERATION, "Player '{}' not found in ban list, checking player cache", playerName);
                 var profile = server.getProfileCache().get(playerName);
                 if (profile.isPresent()) {
                     playerId = profile.get().getId();
                     resolvedName = profile.get().getName();
-                    LOGGER.info("Found player in cache: {} with UUID {}", resolvedName, playerId);
+                    NeoLog.info(LOGGER, LogCategory.MODERATION, "Found player in cache: {} with UUID {}", resolvedName, playerId);
                 }
             }
             
@@ -394,28 +409,28 @@ public class BanCommand {
             
             // Check if player is actually banned before trying to unban
             if (!banManager.isPlayerBanned(playerId)) {
-                LOGGER.info("Player {} ({}) is not currently banned", resolvedName, playerId);
+                NeoLog.info(LOGGER, LogCategory.MODERATION, "Player {} ({}) is not currently banned", resolvedName, playerId);
                 source.sendFailure(MessageUtil.error("neoessentials.moderation.player_not_banned", resolvedName));
                 return 0;
             }
             
             // Unban the player
-            boolean success = banManager.unbanPlayer(playerId);
+            boolean success = banManager.unbanPlayer(playerId, unbannedBy);
             
             if (success) {
                 String message = MessageUtil.localize("neoessentials.moderation.unban_success", resolvedName);
-                source.sendSuccess(() -> MessageUtil.success(message), true);
+                source.sendSuccess(() -> MessageUtil.coloredText(message), false);
                 
                 // Broadcast unban to all online staff
                 broadcastToStaff(server, MessageUtil.localize("neoessentials.moderation.unban_broadcast", 
-                    resolvedName, unbannedBy));
+                    resolvedName, unbannedBy), senderId(source));
                 
-                LOGGER.info("Player {} unbanned by {}", resolvedName, unbannedBy);
+                NeoLog.info(LOGGER, LogCategory.MODERATION, "Player {} unbanned by {}", resolvedName, unbannedBy);
                 return 1;
             } else {
                 LOGGER.error("Failed to unban player {} ({}): unbanPlayer returned false", resolvedName, playerId);
                 String message = MessageUtil.localize("neoessentials.moderation.unban_failed", resolvedName);
-                source.sendFailure(MessageUtil.error(message));
+                source.sendFailure(MessageUtil.coloredText(message));
                 return 0;
             }
             
@@ -435,21 +450,21 @@ public class BanCommand {
             MinecraftServer server = source.getServer();
             
             // Unban the IP
-            boolean success = banManager.unbanIP(ipAddress);
+            boolean success = banManager.unbanIP(ipAddress, unbannedBy);
             
             if (success) {
                 String message = MessageUtil.localize("neoessentials.moderation.unbanip_success", ipAddress);
-                source.sendSuccess(() -> MessageUtil.success(message), true);
+                source.sendSuccess(() -> MessageUtil.coloredText(message), false);
                 
                 // Broadcast unban to all online staff
                 broadcastToStaff(server, MessageUtil.localize("neoessentials.moderation.unbanip_broadcast", 
-                    ipAddress, unbannedBy));
+                    ipAddress, unbannedBy), senderId(source));
                 
-                LOGGER.info("IP {} unbanned by {}", ipAddress, unbannedBy);
+                NeoLog.info(LOGGER, LogCategory.MODERATION, "IP {} unbanned by {}", ipAddress, unbannedBy);
                 return 1;
             } else {
                 String message = MessageUtil.localize("neoessentials.moderation.unbanip_failed", ipAddress);
-                source.sendFailure(MessageUtil.error(message));
+                source.sendFailure(MessageUtil.coloredText(message));
                 return 0;
             }
             
@@ -471,21 +486,24 @@ public class BanCommand {
                 
                 if (bannedPlayers.isEmpty()) {
                     String message = MessageUtil.localize("neoessentials.moderation.banlist_empty_players");
-                    source.sendSuccess(() -> MessageUtil.info(message), false);
+                    source.sendSuccess(() -> MessageUtil.coloredText(message), false);
                     return 1;
                 }
                 
                 String header = MessageUtil.localize("neoessentials.moderation.banlist_header_players", bannedPlayers.size());
-                source.sendSuccess(() -> MessageUtil.info(header), false);
+                source.sendSuccess(() -> MessageUtil.coloredText(header), false);
                 
                 for (BanManager.BanEntry ban : bannedPlayers) {
                     String expireInfo = ban.expireTime > 0 ? 
                         MessageUtil.localize("neoessentials.moderation.banlist_expires", ban.getFormattedExpireTime()) :
                         MessageUtil.localize("neoessentials.moderation.banlist_permanent");
                     
+                    // Args were previously (playerName, reason, bannedBy, ...) but the template
+                    // is "{0} (by {1}, reason: {2}, ...)" — reason and bannedBy were swapped,
+                    // so staff saw the ban REASON where "by <staff>" was expected and vice versa.
                     String banInfo = MessageUtil.localize("neoessentials.moderation.banlist_entry_player",
-                        ban.playerName, ban.reason, ban.bannedBy, ban.getFormattedBanTime(), expireInfo);
-                    source.sendSuccess(() -> MessageUtil.info(banInfo), false);
+                        ban.playerName, ban.bannedBy, ban.reason, ban.getFormattedBanTime(), expireInfo);
+                    source.sendSuccess(() -> MessageUtil.coloredText(banInfo), false);
                 }
                 
             } else { // "ips"
@@ -493,17 +511,18 @@ public class BanCommand {
                 
                 if (bannedIPs.isEmpty()) {
                     String message = MessageUtil.localize("neoessentials.moderation.banlist_empty_ips");
-                    source.sendSuccess(() -> MessageUtil.info(message), false);
+                    source.sendSuccess(() -> MessageUtil.coloredText(message), false);
                     return 1;
                 }
                 
                 String header = MessageUtil.localize("neoessentials.moderation.banlist_header_ips", bannedIPs.size());
-                source.sendSuccess(() -> MessageUtil.info(header), false);
+                source.sendSuccess(() -> MessageUtil.coloredText(header), false);
                 
                 for (BanManager.IPBanEntry ban : bannedIPs) {
+                    // Same reason/bannedBy swap as banlist_entry_player above — fixed.
                     String banInfo = MessageUtil.localize("neoessentials.moderation.banlist_entry_ip",
-                        ban.ipAddress, ban.reason, ban.bannedBy, ban.getFormattedBanTime());
-                    source.sendSuccess(() -> MessageUtil.info(banInfo), false);
+                        ban.ipAddress, ban.bannedBy, ban.reason, ban.getFormattedBanTime());
+                    source.sendSuccess(() -> MessageUtil.coloredText(banInfo), false);
                 }
             }
             
@@ -529,15 +548,31 @@ public class BanCommand {
             }
             return true;
         } catch (NumberFormatException e) {
+            NeoLog.debug(LOGGER, LogCategory.MODERATION, "Rejected invalid IP address format: {}", ip);
             return false;
         }
     }
     
+    /** The command sender's player UUID, or {@code null} if run from console/command block. */
+    private static java.util.UUID senderId(CommandSourceStack source) {
+        return source.getEntity() instanceof ServerPlayer player ? player.getUUID() : null;
+    }
+
     private static void broadcastToStaff(MinecraftServer server, String message) {
+        broadcastToStaff(server, message, null);
+    }
+
+    /**
+     * @param excludeId skipped if non-null — used so the command sender, who already got
+     *                  their own personal confirmation message, does not also get this
+     *                  near-duplicate staff-wide broadcast just because they also qualify.
+     */
+    private static void broadcastToStaff(MinecraftServer server, String message, java.util.UUID excludeId) {
         for (ServerPlayer player : server.getPlayerList().getPlayers()) {
+            if (excludeId != null && player.getUUID().equals(excludeId)) continue;
             if (com.zerog.neoessentials.api.permissions.PermissionAPI.hasPermission(
                     player.getUUID(), "neoessentials.moderation.notifications")) {
-                player.sendSystemMessage(MessageUtil.info(message));
+                player.sendSystemMessage(MessageUtil.coloredText(message));
             }
         }
     }
