@@ -22,6 +22,8 @@ import java.util.List;
 import java.util.UUID;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import com.zerog.neoessentials.logging.LogCategory;
+import com.zerog.neoessentials.logging.NeoLog;
 
 /**
  * Jail commands: /jail, /unjail, /setjail, /jaillist, /jailinfo
@@ -37,7 +39,7 @@ public class JailCommand {
         return SharedSuggestionProvider.suggest(
             jailManager.getAllJailedPlayers().stream()
                 .map(jail -> jail.playerName)
-                .collect(Collectors.toList()),
+                .toList(),
             builder
         );
     };
@@ -47,7 +49,7 @@ public class JailCommand {
         return SharedSuggestionProvider.suggest(
             jailManager.getAllJailLocations().stream()
                 .map(jail -> jail.name)
-                .collect(Collectors.toList()),
+                .toList(),
             builder
         );
     };
@@ -59,6 +61,8 @@ public class JailCommand {
             return;
         }
         // /jail <player> <jail> [duration] [reason]
+        // /jail <player> <jail> [reason]
+        if (com.zerog.neoessentials.config.ConfigManager.getInstance().isCommandEnabled("jail")) {
         dispatcher.register(Commands.literal("jail")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.jail").hasPermission())
             .then(Commands.argument("player", StringArgumentType.word())
@@ -79,12 +83,14 @@ public class JailCommand {
                 )
             )
         );
+        }
 
         // /jailfor <player> <jail> <duration> [reason]  — timed jail (Essentials: sendtemp pattern)
         // A timed jail is a /jail with a duration, so whoever may jail may also jail for a while:
         // neoessentials.moderation.jail grants it too. The dedicated .timed node stays for setups
         // that hand out only the timed form. (LuckPerms treats the two as unrelated nodes: granting
         // the parent neoessentials.moderation.jail does NOT imply the .timed child.)
+        if (com.zerog.neoessentials.config.ConfigManager.getInstance().isCommandEnabled("jailfor")) {
         dispatcher.register(Commands.literal("jailfor")
             .requires(source -> PermissionValidator.validateAnyPermission(source,
                 "neoessentials.moderation.jail.timed", "neoessentials.moderation.jail").hasPermission())
@@ -110,29 +116,58 @@ public class JailCommand {
                 )
             )
         );
-        
+        }
+
         // /unjail <player>
+        if (com.zerog.neoessentials.config.ConfigManager.getInstance().isCommandEnabled("unjail")) {
         dispatcher.register(Commands.literal("unjail")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.unjail").hasPermission())
             .then(Commands.argument("player", StringArgumentType.word())
                 .suggests(SUGGEST_JAILED_PLAYERS)
                 .executes(ctx -> executeUnjail(ctx, StringArgumentType.getString(ctx, "player"))))
         );
-        
-        // /setjail <name>
+        }
+
+        // /setjail <name>                    — auto-detect: wand cuboid selection, else
+        //                                       WorldEdit selection, else sphere at current
+        //                                       position with the configured default radius
+        // /setjail <name> sphere <radius>     — sphere at current position, explicit radius
+        // /setjail <name> cuboid              — cuboid from the wand/WorldEdit selection
+        if (com.zerog.neoessentials.config.ConfigManager.getInstance().isCommandEnabled("setjail")) {
         dispatcher.register(Commands.literal("setjail")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.setjail").hasPermission())
             .then(Commands.argument("name", StringArgumentType.word())
-                .executes(ctx -> executeSetJail(ctx, StringArgumentType.getString(ctx, "name"))))
+                .executes(ctx -> executeSetJailAuto(ctx, StringArgumentType.getString(ctx, "name")))
+                .then(Commands.literal("sphere")
+                    .then(Commands.argument("radius", com.mojang.brigadier.arguments.DoubleArgumentType.doubleArg(1.0))
+                        .executes(ctx -> executeSetJailSphere(ctx,
+                            StringArgumentType.getString(ctx, "name"),
+                            com.mojang.brigadier.arguments.DoubleArgumentType.getDouble(ctx, "radius")))))
+                .then(Commands.literal("cuboid")
+                    .executes(ctx -> executeSetJailCuboid(ctx, StringArgumentType.getString(ctx, "name"))))
+            )
         );
-        
+        }
+
+        // /jailwand — give the jail-region selection wand (item configurable via
+        // moderation.jailSettings.wandItem). Right-click = corner 1, left-click = corner 2.
+        if (com.zerog.neoessentials.config.ConfigManager.getInstance().isCommandEnabled("jailwand")) {
+        dispatcher.register(Commands.literal("jailwand")
+            .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.jail.wand").hasPermission())
+            .executes(JailCommand::executeJailWand)
+        );
+        }
+
         // /jaillist
+        if (com.zerog.neoessentials.config.ConfigManager.getInstance().isCommandEnabled("jaillist")) {
         dispatcher.register(Commands.literal("jaillist")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.jaillist").hasPermission())
             .executes(ctx -> executeJailList(ctx))
         );
-        
+        }
+
         // /jailinfo [jail]
+        if (com.zerog.neoessentials.config.ConfigManager.getInstance().isCommandEnabled("jailinfo")) {
         dispatcher.register(Commands.literal("jailinfo")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.jailinfo").hasPermission())
             .executes(ctx -> executeJailInfo(ctx, null))
@@ -140,22 +175,28 @@ public class JailCommand {
                 .suggests(SUGGEST_JAIL_NAMES)
                 .executes(ctx -> executeJailInfo(ctx, StringArgumentType.getString(ctx, "jail"))))
         );
+        }
 
         // /deljail <name>  — Essentials: Commanddeljail
+        if (com.zerog.neoessentials.config.ConfigManager.getInstance().isCommandEnabled("deljail")) {
         dispatcher.register(Commands.literal("deljail")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.setjail").hasPermission())
             .then(Commands.argument("name", StringArgumentType.word())
                 .suggests(SUGGEST_JAIL_NAMES)
                 .executes(ctx -> executeDelJail(ctx, StringArgumentType.getString(ctx, "name"))))
         );
+        }
 
         // /jails — alias for /jaillist (Essentials: Commandjails)
+        if (com.zerog.neoessentials.config.ConfigManager.getInstance().isCommandEnabled("jails")) {
         dispatcher.register(Commands.literal("jails")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.jaillist").hasPermission())
             .executes(ctx -> executeJailList(ctx))
         );
+        }
 
         // /togglejail <player> — toggle a player's jail state (Essentials: Commandtogglejail)
+        if (com.zerog.neoessentials.config.ConfigManager.getInstance().isCommandEnabled("togglejail")) {
         dispatcher.register(Commands.literal("togglejail")
             .requires(source -> PermissionValidator.validatePermission(source, "neoessentials.moderation.jail").hasPermission())
             .then(Commands.argument("player", StringArgumentType.word())
@@ -163,6 +204,7 @@ public class JailCommand {
                     ctx.getSource().getServer().getPlayerNames(), builder))
                 .executes(ctx -> executeToggleJail(ctx, StringArgumentType.getString(ctx, "player"))))
         );
+        }
     }
 
     /**
@@ -261,7 +303,7 @@ public class JailCommand {
                 source.sendFailure(MessageUtil.error("commands.neoessentials.jail.no_locations"));
                 return 0;
             }
-            String jailName = locations.get(0).name;
+            String jailName = locations.getFirst().name;
             boolean ok = jailManager.jailPlayer(resolvedName, playerId, "Toggled by staff", getCommandSender(source), jailName, 0L);
             if (ok) {
                 final String name = resolvedName;
@@ -332,23 +374,34 @@ public class JailCommand {
             boolean success = jailManager.jailPlayer(resolvedName, playerId, reason, jailedBy, jailName, durationMillis);
 
             if (success) {
+                // Our fork's jail_success/jail_broadcast carry the jail name (and, for a timed
+                // sentence, the duration), so the argument lists below match those richer
+                // strings — upstream's single-placeholder trim doesn't apply here. What we do
+                // take from upstream is the display fix: coloredText() instead of success(),
+                // so the §-codes baked into the strings survive.
                 String confirmMessage = durationMillis > 0
                     ? MessageUtil.localize("neoessentials.moderation.jail_success_timed",
                         resolvedName, jailName, BanManager.formatDuration(durationMillis), reason)
                     : MessageUtil.localize("neoessentials.moderation.jail_success",
                         resolvedName, jailName, reason);
-                source.sendSuccess(() -> MessageUtil.success(confirmMessage), true);
+                // `false` here — NOT broadcasting this personal confirmation to ops, since
+                // broadcastToStaff() right below already sends every staff member a
+                // near-identical message via a separate permission node. With both set to
+                // broadcast, anyone who is both an op AND has
+                // neoessentials.moderation.notifications saw the same thing twice.
+                source.sendSuccess(() -> MessageUtil.coloredText(confirmMessage), false);
 
-                // Broadcast jail to all online staff
+                // Broadcast jail to all online staff, excluding the sender (they already got
+                // confirmMessage above) to avoid a second, slightly-differently-worded copy.
                 String broadcastMessage = durationMillis > 0
                     ? MessageUtil.localize("neoessentials.moderation.jail_broadcast_timed",
                         resolvedName, jailName, jailedBy, BanManager.formatDuration(durationMillis), reason)
                     : MessageUtil.localize("neoessentials.moderation.jail_broadcast",
                         resolvedName, jailName, jailedBy, reason);
-                broadcastToStaff(server, broadcastMessage);
+                broadcastToStaff(server, broadcastMessage, senderId(source));
 
-                LOGGER.info("Player {} jailed by {} in {} for {}. Reason: {}", resolvedName,
-                    jailedBy, jailName,
+                NeoLog.info(LOGGER, LogCategory.MODERATION, "Player {} jailed by {} in {} for {}. Reason: {}",
+                    resolvedName, jailedBy, jailName,
                     durationMillis > 0 ? BanManager.formatDuration(durationMillis) : "permanent",
                     reason);
                 return 1;
@@ -405,13 +458,15 @@ public class JailCommand {
 
             if (success) {
                 String confirmMessage = MessageUtil.localize("neoessentials.moderation.unjail_success", resolvedName, unjailedBy);
-                source.sendSuccess(() -> MessageUtil.success(confirmMessage), true);
+                // See the matching comment in executeJail — `false` avoids double-showing this
+                // to anyone who is both an op and has neoessentials.moderation.notifications.
+                source.sendSuccess(() -> MessageUtil.coloredText(confirmMessage), false);
 
-                // Broadcast unjail to all online staff
-                broadcastToStaff(server, MessageUtil.localize("neoessentials.moderation.unjail_broadcast", 
-                    resolvedName, unjailedBy));
+                // Broadcast unjail to all online staff (excluding the sender, already notified above)
+                broadcastToStaff(server, MessageUtil.localize("neoessentials.moderation.unjail_broadcast",
+                    resolvedName, unjailedBy), senderId(source));
 
-                LOGGER.info("Player {} unjailed by {}", resolvedName, unjailedBy);
+                NeoLog.info(LOGGER, LogCategory.MODERATION, "Player {} unjailed by {}", resolvedName, unjailedBy);
                 return 1;
             } else {
                 source.sendFailure(MessageUtil.error("neoessentials.moderation.unjail_failed", resolvedName));
@@ -424,39 +479,144 @@ public class JailCommand {
         }
     }
     
-    private static int executeSetJail(CommandContext<CommandSourceStack> ctx, String jailName) {
+    /**
+     * {@code /setjail <name>} — auto-detects the source: a completed NeoEssentials wand
+     * selection takes priority, then a WorldEdit cuboid selection (best-effort — see
+     * {@link com.zerog.neoessentials.moderation.WorldEditIntegration}), and only falls back to
+     * a sphere at the player's current position (configured default radius) if neither is
+     * present, preserving the exact old point-only behavior for anyone not using the wand.
+     */
+    private static int executeSetJailAuto(CommandContext<CommandSourceStack> ctx, String jailName) {
         CommandSourceStack source = ctx.getSource();
-        
         try {
-            // Must be executed by a player
             if (!(source.getEntity() instanceof ServerPlayer player)) {
                 source.sendFailure(MessageUtil.error("neoessentials.moderation.player_only_command"));
                 return 0;
             }
-            
+
             JailManager jailManager = JailManager.getInstance();
-            
+            String createdBy = player.getName().getString();
+            var selectionManager = com.zerog.neoessentials.moderation.JailSelectionManager.getInstance();
+
+            if (selectionManager.hasFullSelection(player.getUUID())) {
+                BlockPos pos1 = selectionManager.getPos1(player.getUUID());
+                BlockPos pos2 = selectionManager.getPos2(player.getUUID());
+                String dimension = selectionManager.getDimension(player.getUUID());
+                boolean success = jailManager.setJailLocationCuboid(jailName, pos1, pos2, dimension, createdBy);
+                selectionManager.clear(player.getUUID());
+                return reportSetJailResult(source, jailName, success);
+            }
+
+            var weSelection = com.zerog.neoessentials.moderation.WorldEditIntegration.getSelection(player);
+            if (weSelection != null) {
+                String dimension = player.level().dimension().location().toString();
+                boolean success = jailManager.setJailLocationCuboid(jailName, weSelection.min(), weSelection.max(), dimension, createdBy);
+                return reportSetJailResult(source, jailName, success);
+            }
+
             BlockPos position = player.blockPosition();
             String dimension = player.level().dimension().location().toString();
-            String createdBy = player.getName().getString();
-            
-            boolean success = jailManager.setJailLocation(jailName, position, dimension, createdBy);
-            
-            if (success) {
-                String message = MessageUtil.localize("neoessentials.moderation.setjail_success", jailName, 
-                    position.getX(), position.getY(), position.getZ());
-                source.sendSuccess(() -> MessageUtil.success(message), true);
-                
-                LOGGER.info("Jail '{}' set at {} by {}", jailName, position, createdBy);
-                return 1;
-            } else {
-                source.sendFailure(MessageUtil.error("neoessentials.moderation.setjail_failed", jailName));
-                return 0;
-            }
-            
+            double defaultRadius = com.zerog.neoessentials.config.ConfigManager.getDefaultJailSphereRadius();
+            boolean success = jailManager.setJailLocationSphere(jailName, position, defaultRadius, dimension, createdBy);
+            return reportSetJailResult(source, jailName, success);
         } catch (Exception e) {
             LOGGER.error("Error executing setjail command", e);
             source.sendFailure(MessageUtil.error("neoessentials.moderation.setjail_error"));
+            return 0;
+        }
+    }
+
+    /** {@code /setjail <name> sphere <radius>} — sphere at the player's current position. */
+    private static int executeSetJailSphere(CommandContext<CommandSourceStack> ctx, String jailName, double radius) {
+        CommandSourceStack source = ctx.getSource();
+        try {
+            if (!(source.getEntity() instanceof ServerPlayer player)) {
+                source.sendFailure(MessageUtil.error("neoessentials.moderation.player_only_command"));
+                return 0;
+            }
+            BlockPos position = player.blockPosition();
+            String dimension = player.level().dimension().location().toString();
+            boolean success = JailManager.getInstance().setJailLocationSphere(
+                jailName, position, radius, dimension, player.getName().getString());
+            return reportSetJailResult(source, jailName, success);
+        } catch (Exception e) {
+            LOGGER.error("Error executing setjail sphere command", e);
+            source.sendFailure(MessageUtil.error("An error occurred while executing the setjail command."));
+            return 0;
+        }
+    }
+
+    /** {@code /setjail <name> cuboid} — cuboid from the NeoEssentials wand or WorldEdit selection. */
+    private static int executeSetJailCuboid(CommandContext<CommandSourceStack> ctx, String jailName) {
+        CommandSourceStack source = ctx.getSource();
+        try {
+            if (!(source.getEntity() instanceof ServerPlayer player)) {
+                source.sendFailure(MessageUtil.error("neoessentials.moderation.player_only_command"));
+                return 0;
+            }
+
+            var selectionManager = com.zerog.neoessentials.moderation.JailSelectionManager.getInstance();
+            if (selectionManager.hasFullSelection(player.getUUID())) {
+                BlockPos pos1 = selectionManager.getPos1(player.getUUID());
+                BlockPos pos2 = selectionManager.getPos2(player.getUUID());
+                String dimension = selectionManager.getDimension(player.getUUID());
+                boolean success = JailManager.getInstance().setJailLocationCuboid(
+                    jailName, pos1, pos2, dimension, player.getName().getString());
+                selectionManager.clear(player.getUUID());
+                return reportSetJailResult(source, jailName, success);
+            }
+
+            var weSelection = com.zerog.neoessentials.moderation.WorldEditIntegration.getSelection(player);
+            if (weSelection != null) {
+                String dimension = player.level().dimension().location().toString();
+                boolean success = JailManager.getInstance().setJailLocationCuboid(
+                    jailName, weSelection.min(), weSelection.max(), dimension, player.getName().getString());
+                return reportSetJailResult(source, jailName, success);
+            }
+
+            source.sendFailure(MessageUtil.error("commands.neoessentials.jail.wand.no_selection"));
+            return 0;
+        } catch (Exception e) {
+            LOGGER.error("Error executing setjail cuboid command", e);
+            source.sendFailure(MessageUtil.error("An error occurred while executing the setjail command."));
+            return 0;
+        }
+    }
+
+    private static int reportSetJailResult(CommandSourceStack source, String jailName, boolean success) {
+        if (success) {
+            source.sendSuccess(() -> MessageUtil.success("commands.neoessentials.jail.setjail_created", jailName), true);
+            return 1;
+        } else {
+            source.sendFailure(MessageUtil.error("neoessentials.moderation.setjail_failed", jailName));
+            return 0;
+        }
+    }
+
+    /** {@code /jailwand} — gives the player the configured jail-region selection wand item. */
+    private static int executeJailWand(CommandContext<CommandSourceStack> ctx) {
+        CommandSourceStack source = ctx.getSource();
+        try {
+            if (!(source.getEntity() instanceof ServerPlayer player)) {
+                source.sendFailure(MessageUtil.error("neoessentials.moderation.player_only_command"));
+                return 0;
+            }
+            String wandItemId = com.zerog.neoessentials.config.ConfigManager.getJailWandItem();
+            var itemId = com.zerog.neoessentials.util.ResourceLocationHelper.parse(wandItemId);
+            var item = net.minecraft.core.registries.BuiltInRegistries.ITEM.getOptional(itemId).orElse(null);
+            if (item == null) {
+                source.sendFailure(MessageUtil.error("commands.neoessentials.jail.wand.invalid_item", wandItemId));
+                return 0;
+            }
+            net.minecraft.world.item.ItemStack wandStack = new net.minecraft.world.item.ItemStack(item);
+            if (!player.getInventory().add(wandStack)) {
+                player.drop(wandStack, false);
+            }
+            source.sendSuccess(() -> MessageUtil.success("commands.neoessentials.jail.wand.given"), false);
+            return 1;
+        } catch (Exception e) {
+            LOGGER.error("Error executing jailwand command", e);
+            source.sendFailure(MessageUtil.error("An error occurred while executing the jailwand command."));
             return 0;
         }
     }
@@ -470,17 +630,19 @@ public class JailCommand {
             
             if (jailedPlayers.isEmpty()) {
                 String message = MessageUtil.localize("neoessentials.moderation.jaillist_empty");
-                source.sendSuccess(() -> MessageUtil.info(message), false);
+                source.sendSuccess(() -> MessageUtil.coloredText(message), false);
                 return 1;
             }
             
             String header = MessageUtil.localize("neoessentials.moderation.jaillist_header", jailedPlayers.size());
-            source.sendSuccess(() -> MessageUtil.info(header), false);
+            source.sendSuccess(() -> MessageUtil.coloredText(header), false);
             
             for (JailManager.JailEntry jail : jailedPlayers) {
+                // reason/jailedBy were swapped relative to the template ("jailed by {2}") —
+                // staff saw the jail REASON where the jailing staff member's name belonged.
                 String jailInfo = MessageUtil.localize("neoessentials.moderation.jaillist_entry",
-                    jail.playerName, jail.jailName, jail.reason, jail.jailedBy, jail.getFormattedJailTime());
-                source.sendSuccess(() -> MessageUtil.info(jailInfo), false);
+                    jail.playerName, jail.jailName, jail.jailedBy, jail.reason, jail.getFormattedJailTime());
+                source.sendSuccess(() -> MessageUtil.coloredText(jailInfo), false);
             }
             
             return 1;
@@ -504,22 +666,22 @@ public class JailCommand {
                 
                 if (jailLocations.isEmpty()) {
                     String message = MessageUtil.localize("neoessentials.moderation.jailinfo_no_jails");
-                    source.sendSuccess(() -> MessageUtil.warning(message), false);
+                    source.sendSuccess(() -> MessageUtil.coloredText(message), false);
                     return 1;
                 }
                 
                 String message = MessageUtil.localize("neoessentials.moderation.jailinfo_all_header");
-                source.sendSuccess(() -> MessageUtil.warning(message), false);
+                source.sendSuccess(() -> MessageUtil.coloredText(message), false);
                 
                 for (JailManager.JailLocation jail : jailLocations) {
                     String locationInfo = MessageUtil.localize("neoessentials.moderation.jailinfo_location",
                         jail.name, jail.position.getX(), jail.position.getY(), jail.position.getZ(), 
                         jail.dimension, jail.createdBy, jail.getFormattedCreatedTime());
-                    source.sendSuccess(() -> MessageUtil.info(locationInfo), false);
+                    source.sendSuccess(() -> MessageUtil.coloredText(locationInfo), false);
                 }
                 
                 String countInfo = MessageUtil.localize("neoessentials.moderation.jailinfo_count", jailLocations.size());
-                source.sendSuccess(() -> MessageUtil.info(countInfo), false);
+                source.sendSuccess(() -> MessageUtil.coloredText(countInfo), false);
                 
             } else {
                 // Show specific jail info
@@ -533,7 +695,7 @@ public class JailCommand {
                 String locationInfo = MessageUtil.localize("neoessentials.moderation.jailinfo_specific",
                     jail.name, jail.position.getX(), jail.position.getY(), jail.position.getZ(), 
                     jail.dimension, jail.createdBy, jail.getFormattedCreatedTime());
-                source.sendSuccess(() -> MessageUtil.info(locationInfo), false);
+                source.sendSuccess(() -> MessageUtil.coloredText(locationInfo), false);
                 
                 // Show how many players are in this jail
                 long playersInJail = jailManager.getAllJailedPlayers().stream()
@@ -542,7 +704,7 @@ public class JailCommand {
                 
                 if (playersInJail > 0) {
                     String playerInfo = MessageUtil.localize("neoessentials.moderation.jailinfo_players", playersInJail);
-                    source.sendSuccess(() -> MessageUtil.info(playerInfo), false);
+                    source.sendSuccess(() -> MessageUtil.coloredText(playerInfo), false);
                 }
             }
             
@@ -556,12 +718,30 @@ public class JailCommand {
     }
     
     private static void broadcastToStaff(MinecraftServer server, String message) {
+        broadcastToStaff(server, message, null);
+    }
+
+    /**
+     * @param excludeId skipped if non-null — used so the command sender, who already got their
+     *                  own personal confirmation message, doesn't also get this near-duplicate
+     *                  staff-wide broadcast just because they also qualify for it.
+     */
+    private static void broadcastToStaff(MinecraftServer server, String message, UUID excludeId) {
+        // `message` here is already fully-localized, resolved text (callers pass the result of
+        // MessageUtil.localize(key, args...)) — coloredText() applies its embedded §-codes
+        // without re-running it through localize() as if it were a translation key itself.
         for (ServerPlayer player : server.getPlayerList().getPlayers()) {
+            if (excludeId != null && player.getUUID().equals(excludeId)) continue;
             if (com.zerog.neoessentials.api.permissions.PermissionAPI.hasPermission(
                     player.getUUID(), "neoessentials.moderation.notifications")) {
-                player.sendSystemMessage(MessageUtil.info(message));
+                player.sendSystemMessage(MessageUtil.coloredText(message));
             }
         }
+    }
+
+    /** The command sender's player UUID, or {@code null} if run from console/command block. */
+    private static UUID senderId(CommandSourceStack source) {
+        return source.getEntity() instanceof ServerPlayer player ? player.getUUID() : null;
     }
     
     private static int executeDelJail(CommandContext<CommandSourceStack> ctx, String jailName) {
@@ -577,12 +757,12 @@ public class JailCommand {
                 .filter(j -> j.jailName.equals(jailName)).count();
             jailManager.removeJailLocation(jailName);
             String msg = MessageUtil.localize("commands.neoessentials.jail.deljail_success", jailName);
-            source.sendSuccess(() -> MessageUtil.success(msg), true);
+            source.sendSuccess(() -> MessageUtil.coloredText(msg), true);
             if (inmates > 0) {
                 String warn = MessageUtil.localize("commands.neoessentials.jail.deljail_had_inmates", inmates);
-                source.sendSuccess(() -> MessageUtil.warning(warn), false);
+                source.sendSuccess(() -> MessageUtil.coloredText(warn), false);
             }
-            LOGGER.info("Jail location '{}' deleted by {}", jailName, getCommandSender(source));
+            NeoLog.info(LOGGER, LogCategory.MODERATION, "Jail location '{}' deleted by {}", jailName, getCommandSender(source));
             return 1;
         } catch (Exception e) {
             LOGGER.error("Error executing deljail command", e);
