@@ -12,7 +12,6 @@ import com.zerog.neoessentials.util.PermissionValidator;
 import com.zerog.neoessentials.moderation.VanishManager;
 import com.zerog.neoessentials.chat.AfkManager;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Implements the /realname command - Shows the real username of a player who has a nickname
@@ -37,7 +36,8 @@ public class RealnameCommand {
             if (nickname != null) {
                 String cleanNickname = nickname.replaceAll("&[0-9a-fk-or#]", "").replaceAll("&#[0-9a-fA-F]{6}", "");
                 if (cleanNickname.toLowerCase().startsWith(input)) {
-                    builder.suggest(cleanNickname, net.minecraft.network.chat.Component.literal("Nickname of " + realName));
+                    builder.suggest(cleanNickname, com.zerog.neoessentials.util.MessageUtil.component(
+                        "commands.neoessentials.realname.nickname_of_hover", realName));
                 }
             }
         }
@@ -101,10 +101,10 @@ public class RealnameCommand {
                 String cleanNickname = nickname.replaceAll("&[0-9a-fk-or]", "").toLowerCase();
                 return cleanNickname.equals(query.toLowerCase());
             })
-            .collect(Collectors.toList());
+            .toList();
         
         if (nicknameMatches.size() == 1) {
-            return showPlayerInfo(source, nicknameMatches.get(0), false);
+            return showPlayerInfo(source, nicknameMatches.getFirst(), false);
         } else if (nicknameMatches.size() > 1) {
             source.sendFailure(MessageUtil.error("commands.neoessentials.realname.multiple_matches", query));
             
@@ -135,18 +135,18 @@ public class RealnameCommand {
                 
                 return false;
             })
-            .collect(Collectors.toList());
+            .toList();
         
         if (partialMatches.isEmpty()) {
             source.sendFailure(MessageUtil.error("commands.neoessentials.realname.not_found", query));
             return 0;
         } else if (partialMatches.size() == 1) {
-            return showPlayerInfo(source, partialMatches.get(0), false);
+            return showPlayerInfo(source, partialMatches.getFirst(), false);
         } else {
             // Multiple partial matches
             source.sendFailure(MessageUtil.error("commands.neoessentials.realname.multiple_matches", query));
             
-            source.sendSuccess(() -> MessageUtil.info("commands.neoessentials.realname.partial_matches_header"), false);
+            source.sendSuccess(() -> MessageUtil.info("commands.neoessentials.realname.partial_matches_header", query), false);
             for (ServerPlayer player : partialMatches.subList(0, Math.min(10, partialMatches.size()))) {
                 String nickname = NickCommand.getNickname(player.getUUID());
                 if (nickname != null) {
